fix: add object orientation to game

--- a/PongAI.ipynb
+++ b/PongAI.ipynb
@@ -5,271 +5,255 @@
    "execution_count": 1,
    "id": "97e2bd72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pygame\n",
-      "  Downloading pygame-2.1.2-cp39-cp39-win_amd64.whl (8.4 MB)\n",
-      "Installing collected packages: pygame\n",
-      "Successfully installed pygame-2.1.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install pygame"
+    "#pip install pygame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ae3c8b26",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
-    "import random\n",
-    "import sys"
+    "import random as r\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "1346ff3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deleteRec(screen):\n",
-    "    global yrect1, yrect2\n",
-    "    pygame.draw.rect(screen, (0,0,0), (15, yrect1, 15, 100), 0)\n",
-    "    pygame.draw.rect(screen, (0,0,0), (970, yrect2, 15, 100), 0)"
+    "WHITE = (255,255,255)\n",
+    "BLACK = (0,0,0)\n",
+    "GREEN = (0, 255, 0)\n",
+    "RED = (255, 0, 0)\n",
+    "YELLOW = (255, 255, 0)\n",
+    "BLUE = (0, 0, 255)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0e15c62d",
+   "execution_count": 18,
+   "id": "bd1dc5b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drawRec(screen):\n",
-    "    global yrect1, yrect2\n",
-    "    pygame.draw.rect(screen,(255,255,255),(15,yrect1,15,100),0)\n",
-    "    pygame.draw.rect(screen, (255, 255, 255), (970, yrect2, 15, 100), 0)"
+    "class Player:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.speed = 1\n",
+    "        self.score = 0\n",
+    "        self.direction = 0\n",
+    "    \n",
+    "    def reset(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.speed = 7\n",
+    "        self.direction = 0\n",
+    "            \n",
+    "    def update(self):\n",
+    "        pygame.draw.rect(g.s, BLACK, (self.x, self.y, 15, 100), 0)\n",
+    "        newValue = self.y + self.speed * self.direction\n",
+    "        if  40 <= newValue and newValue <= 500:\n",
+    "            self.y += self.speed * self.direction\n",
+    "        pygame.draw.rect(g.s, WHITE, (self.x, self.y, 15, 100), 0)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "845a771b",
+   "execution_count": 30,
+   "id": "98e7d661",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def moveBall():\n",
-    "    global direction, xBall, yBall, yrect1, yrect2, speedBall, paraden\n",
-    "    pygame.draw.circle(screen, (0, 0, 0), (xBall, yBall), 15, 3)\n",
-    "    if direction[0] == \"r\":\n",
-    "        if xBall >=960:\n",
-    "            if abs(yBall-(yrect2+50))<=60:\n",
-    "                xBall -= speedBall\n",
-    "                direction[0] = \"l\"\n",
-    "                direction[1] = random.randint(-5,6)\n",
-    "                paraden+=1\n",
-    "            else:\n",
-    "                direction[0]=\"xl\"\n",
+    "class Ball:\n",
+    "    def __init__(self, size):\n",
+    "        self.x = int(size[0] / 2)\n",
+    "        self.y = int(size[1] / 2) + 20\n",
+    "        self.rounds = r.randint(500, 1500)\n",
+    "        self.paraden = 0\n",
+    "    \n",
+    "    def reset(self, size):\n",
+    "        self.x = int(size[0] / 2)\n",
+    "        self.y = int(size[1] / 2) + 20\n",
+    "        self.rounds = r.randint(400, 800)\n",
+    "        self.vector = (1, 0)\n",
+    "        self.speed = 5\n",
+    "        self.side = -1 # l=1 r=-1\n",
+    "    \n",
+    "    def speedup(self):\n",
+    "        if self.rounds == 0:\n",
+    "            self.speed += 1\n",
+    "        self.rounds -= 1\n",
+    "    \n",
+    "    def move(self):\n",
+    "        pygame.draw.circle(g.s, BLACK, (self.x, self.y), 15, 3)\n",
+    "        (dx, dy) = self.vector\n",
+    "        \n",
+    "        if 55 <= self.y and self.y <= 585:\n",
+    "            self.y += int(dy * self.speed)\n",
     "        else:\n",
-    "            xBall+=speedBall\n",
-    "    else:\n",
-    "        if xBall <= 40:\n",
-    "            if abs(yBall - (yrect1 + 50)) <= 60:\n",
-    "                xBall += speedBall\n",
-    "                direction[0] = \"r\"\n",
-    "                direction[1] = random.randint(-5, 6)\n",
-    "                paraden+=1\n",
-    "            else:\n",
-    "                direction[0]=\"xr\"\n",
+    "            self.vector = (dx, -dy)\n",
+    "            self.y += int(-dy * self.speed)\n",
+    "        \n",
+    "        if 40 <= self.x and self.x <= 960:\n",
+    "            self.x += int(dx * self.speed) * self.side\n",
     "        else:\n",
-    "            xBall -= speedBall\n",
-    "\n",
-    "    if yBall + direction[1] < 55 or yBall + direction[1] > 585:\n",
-    "        direction[1] = -direction[1]\n",
-    "    else:\n",
-    "        yBall += direction[1]\n",
-    "    pygame.draw.lines(screen, (0, 255, 0), False, [(500, 40), (500, 600)], 3)\n",
-    "    pygame.draw.circle(screen, (255, 0, 0), (xBall, yBall), 15, 3)\n",
-    "    return directio"
+    "            if abs(b.y-(p1.y+50)) <= 60 and self.side == -1:\n",
+    "                self.side *= -1\n",
+    "                self.vector = calcTrack(self.vector)\n",
+    "                self.x = 40\n",
+    "                self.paraden += 1\n",
+    "            elif abs(b.y-(p2.y+50)) <= 60 and self.side == 1:\n",
+    "                self.side *= -1\n",
+    "                self.vector = calcTrack(self.vector)\n",
+    "                self.x = 960\n",
+    "                self.paraden += 1\n",
+    "            else:\n",
+    "                if self.side == -1:\n",
+    "                    p2.score += 1\n",
+    "                else:\n",
+    "                    p1.score += 1\n",
+    "                g.running = False\n",
+    "        pygame.draw.circle(g.s, RED, (self.x, self.y), 15, 3)\n",
+    "        pygame.display.flip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d2609b93",
+   "execution_count": 31,
+   "id": "21dd908f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aktualisiere():\n",
-    "    global winsL, winsR, speedBall, paraden\n",
-    "    pygame.init()\n",
-    "    screen = pygame.display.set_mode([x, y])\n",
-    "    screen.fill((0, 0, 0))\n",
-    "    # Anzeige der Punktzahl\n",
-    "    font = pygame.font.Font(None, 32)\n",
-    "    txt_surface = font.render(f\"  {winsL}       {winsR}\", True, (0, 0, 255))\n",
-    "    screen.blit(txt_surface, (455, 7))\n",
-    "    # Aktualisierung der Geschwindigkeit\n",
-    "    pygame.draw.lines(screen, (0, 255, 0), False, [(0, 37), (1000, 37)], 3)\n",
-    "    pygame.draw.lines(screen, (0, 255, 0), False, [(500, 40), (500, 600)], 3)\n",
-    "    txt_surfaceSpeed = fontSpeed.render(f\"Geschwindigkeit: {speedBall}\", True, (255, 255, 0))\n",
-    "    screen.blit(txt_surfaceSpeed, (800, 10))\n",
-    "    txt_surfaceSpeed = fontSpeed.render(f\"Paraden: {paraden}\", True, (255, 255, 0))\n",
-    "    screen.blit(txt_surfaceSpeed, (20, 10))"
+    "def calcTrack(vector):\n",
+    "    (x, y) = vector\n",
+    "    dy = 1 if y > 0 else -1\n",
+    "    rand = r.uniform(0.3, 1)\n",
+    "    return (rand, dy*math.sqrt(1-rand ** 2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "83b260eb",
+   "execution_count": 32,
+   "id": "9c398046",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def init():\n",
-    "    yrect1 = 55\n",
-    "    yrect2 = 485\n",
-    "    xBall = int(x / 2)\n",
-    "    yBall = int(y / 2)+20\n",
+    "class Game:\n",
+    "    def __init__(self, size):\n",
+    "        pygame.init()\n",
+    "        self.s = pygame.display.set_mode([size[0], size[1]])\n",
+    "        self.size = size\n",
+    "        self.pause = False\n",
+    "        self.running = True\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.running = True\n",
     "\n",
-    "    pygame.init()\n",
-    "    screen = pygame.display.set_mode([x, y])\n",
-    "    screen.fill((0, 0, 0))\n",
-    "    speed1 = 0\n",
-    "    speed2 = 0\n",
-    "    speedBall = 5\n",
-    "    rounds = 1\n",
-    "    direction = [\"r\", 0]\n",
-    "    pygame.draw.lines(screen, (0, 255, 0), False, [(0, 37), (1000, 37)], 3)\n",
-    "    pygame.draw.lines(screen, (0, 255, 0), False, [(500, 40), (500, 600)], 3)\n",
-    "    pygame.draw.circle(screen, (255, 0, 0), (xBall, yBall), 15, 3)\n",
-    "    pygame.draw.rect(screen, (255, 255, 255), (15, yrect1, 15, 100), 0)\n",
-    "    pygame.draw.rect(screen, (255, 255, 255), (970, yrect2, 15, 100), 0)"
+    "    def setPause(self):\n",
+    "        input_boxPause = pygame.Rect(450, 284, 100, 32)\n",
+    "        txt_surfacePause = font.render(\"Pause\", True, (255, 255, 0))\n",
+    "        self.s.blit(txt_surfacePause, (input_boxPause.x + 5, input_boxPause.y + 5))\n",
+    "        pygame.draw.rect(self.s, YELLOW, input_boxPause, 2)\n",
+    "        pygame.display.flip()\n",
+    "        pause=True\n",
+    "        while pause:\n",
+    "            for subEvent in pygame.event.get():\n",
+    "                if subEvent.type == pygame.QUIT:\n",
+    "                    sys.exit()\n",
+    "                if subEvent.type == pygame.KEYDOWN:\n",
+    "                    if subEvent.key == pygame.K_SPACE:\n",
+    "                        pause=False\n",
+    "                        \n",
+    "    def draw(self, time):\n",
+    "        self.s.fill((0, 0, 0))\n",
+    "        pygame.draw.lines(self.s, GREEN, False, [(0, 37), (1000, 37)], 3)\n",
+    "        pygame.draw.lines(self.s, GREEN, False, [(500, 40), (500, 600)], 3)\n",
+    "        pygame.draw.rect(self.s, WHITE, (15, p1.y, 15, 100), 0)\n",
+    "        pygame.draw.rect(self.s, WHITE, (970, p2.y, 15, 100), 0)\n",
+    "        \n",
+    "        #Anzeige der Punktzahl\n",
+    "        font = pygame.font.Font(None, 32)\n",
+    "        self.s.blit(font.render(f\"  {p1.score}    {p2.score}\", True, (0,0,255)), (455, 7))\n",
+    "\n",
+    "        #Anzeige der Geschwindigkeit\n",
+    "        fontSpeed = pygame.font.Font(None, 26)\n",
+    "        self.s.blit(fontSpeed.render(f\"Geschwindigkeit: {b.speed}\", True, YELLOW), (800, 10))\n",
+    "        self.s.blit(fontSpeed.render(f\"Paraden: {b.paraden}\", True, YELLOW), (20, 10))\n",
+    "        \n",
+    "        pygame.time.wait(time)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "292e6d31",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'screen' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\SAMUEL~1\\AppData\\Local\\Temp/ipykernel_4908/4049114529.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mfont\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfont\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFont\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mtxt_surface\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfont\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"  {winsL}       {winsR}\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m255\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mscreen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mblit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtxt_surface\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m455\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m#Anzeige der Geschwindigkeit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'screen' is not defined"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "x = 1000\n",
-    "y = 600\n",
-    "winsL = 0\n",
-    "winsR = 0\n",
-    "paraden = 0\n",
+    "size = (1000, 600)\n",
+    "g = Game(size)\n",
+    "p1 = Player(15, 55)\n",
+    "p2 = Player(970, 485)\n",
+    "b = Ball(size)\n",
     "\n",
-    "init()\n",
-    "while True:\n",
-    "    #Anzeige der Punktzahl\n",
-    "    font = pygame.font.Font(None, 32)\n",
-    "    txt_surface = font.render(f\"  {winsL}       {winsR}\", True, (0,0,255))\n",
-    "    screen.blit(txt_surface, (455, 7))\n",
-    "\n",
-    "    #Anzeige der Geschwindigkeit\n",
-    "    fontSpeed = pygame.font.Font(None, 26)\n",
-    "    txt_surfaceSpeed = fontSpeed.render(f\"Geschwindigkeit: {speedBall}\", True, (255, 255, 0))\n",
-    "    screen.blit(txt_surfaceSpeed, (800, 10))\n",
-    "\n",
-    "    #Anzeige der Paraden\n",
-    "    txt_surfaceSpeed = fontSpeed.render(f\"Paraden: {paraden}\", True, (255, 255, 0))\n",
-    "    screen.blit(txt_surfaceSpeed, (20, 10))\n",
-    "\n",
-    "    pygame.display.flip()\n",
-    "    running = True\n",
-    "    pygame.time.wait(1000)\n",
-    "\n",
-    "    #Veränderung der Ballgeschwindigkeit ist in jeder Runde anders\n",
-    "    tempowechsel = random.randint(500, 1500)\n",
-    "    while running:\n",
-    "        #Spiel wird nach gewisser Zeit schwerer (Ball wird schneller)\n",
-    "        if rounds % tempowechsel == 0:\n",
-    "            speedBall+=1\n",
-    "            aktualisiere()\n",
-    "        rounds+=1\n",
-    "\n",
+    "test = True\n",
+    "while test:\n",
+    "    g.reset()\n",
+    "    p1.reset(15, 55)\n",
+    "    p2.reset(970, 485)\n",
+    "    b.reset(size)\n",
+    "    g.draw(1000)\n",
+    "    \n",
+    "    while g.running:\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
-    "                sys.exit()\n",
+    "                g.running = False\n",
+    "                test = False\n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if event.key == pygame.K_w:\n",
-    "                    speed1 = -6\n",
+    "                    p1.direction = -1\n",
     "                if event.key == pygame.K_s:\n",
-    "                    speed1 = 6\n",
+    "                    p1.direction = 1\n",
     "                if event.key == pygame.K_UP:\n",
-    "                    speed2 = -6\n",
+    "                    p2.direction = -1\n",
     "                if event.key == pygame.K_DOWN:\n",
-    "                    speed2 = 6\n",
+    "                    p2.direction = 1\n",
     "                if event.key == pygame.K_SPACE:\n",
-    "                    input_boxPause = pygame.Rect(450, 284, 100, 32)\n",
-    "                    txt_surfacePause = font.render(\"  Pause  \", True, (255, 255, 0))\n",
-    "                    screen.blit(txt_surfacePause, (input_boxPause.x + 5, input_boxPause.y + 5))\n",
-    "                    pygame.draw.rect(screen, (255, 255, 0), input_boxPause, 2)\n",
-    "                    pygame.display.flip()\n",
-    "                    pause=True\n",
-    "                    while pause:\n",
-    "                        for subEvent in pygame.event.get():\n",
-    "                            if subEvent.type == pygame.QUIT:\n",
-    "                                sys.exit()\n",
-    "                            if subEvent.type == pygame.KEYDOWN:\n",
-    "                                if subEvent.key == pygame.K_SPACE:\n",
-    "                                    #wegen Blit -> Fenster komplett neu malen\n",
-    "                                    aktualisiere()\n",
-    "                                    pause=False\n",
+    "                    g.setPause()\n",
+    "        b.speedup()\n",
+    "        p1.update()\n",
+    "        p2.update()\n",
+    "        b.move()\n",
+    "        g.draw(0)\n",
+    "        \n",
     "\n",
-    "        deleteRec(screen)\n",
-    "        if yrect1 + speed1 >=40 and yrect1 + speed1 <=500:\n",
-    "            yrect1+=speed1\n",
-    "        if yrect2 + speed2 >= 40 and yrect2 + speed2 <= 500:\n",
-    "            yrect2+=speed2\n",
-    "        drawRec(screen)\n",
-    "\n",
-    "        direction = moveBall()\n",
-    "        if direction[0][0]==\"x\":\n",
-    "            if direction[0][1]==\"r\":\n",
-    "                winsR+=1\n",
-    "            else:\n",
-    "                winsL+=1\n",
-    "            running=False\n",
-    "            print(f\"Links: {winsL} || Rechts: {winsR}\")\n",
-    "        pygame.display.flip()\n",
-    "        pygame.time.wait(8)"
+    "pygame.quit()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36796d9",
+   "id": "d975c459",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8f3698b",
    "metadata": {},
    "outputs": [],
    "source": []
